# t2_project

./: .gitignore  README.md  cv_analyzer.py  pyproject.toml  requirements.txt
